--- a/data/Evernight.wiki
+++ b/data/Evernight.wiki
@@ -4,6 +4,10 @@ the darker reflection of [Luthadel] in the plane of [Shadowfell]
 
 Ruled by the lich [Thargaun]
 
+Weenies: - alley wreches(from Mordekeinen's) wandering in packs of about 15-20 rummaging through body dumpsters
+         - lonely (from Mordekeinen's) just slumped against a wall, crying, but attacks if given attention
+          
+
 ++places of interest
 
 ++++ [Thargaun]'s Mansion
