--- a/data/Shadowfell.wiki
+++ b/data/Shadowfell.wiki
@@ -2,6 +2,10 @@
 
 [Shadowfell Towns]
 
+Wandering Weenies:
+   - Ambush by a group of Lost (from Mordekainens)
+   
+
 
 ++++Places of Interest
 [Cess]
