--- a/data/Prisoners.wiki
+++ b/data/Prisoners.wiki
@@ -1,7 +1,7 @@
 ﻿++ Prisoners
 
 
-Nareik - Human - Imprisoned for torturing people inside of Iron Maiden pants. Very crude man. Operated in vacant areas of Ak'Anon
+Kieran/Nareik - Human - Imprisoned for torturing people inside of Iron Maiden pants. Very crude man. Operated in vacant areas of Ak'Anon
     "In a traditional Iron Maiden, you don't get to witness their expression when they suffer!"
     "do you want to get in my pants?"
 
