--- a/data/Grogar.wiki
+++ b/data/Grogar.wiki
@@ -3,3 +3,5 @@
 Half Orc Monk who joined the party during the battle of mayara.
 
 consumed Dodo and Wood Fruits (wood type pine)
+
+Consumed the Portal fruit, Grogar's back is now connected to Magnolia's in [Gorda]
