--- a/data/Harris Flennre.wiki
+++ b/data/Harris Flennre.wiki
@@ -14,3 +14,5 @@ Works as the city Herbalist in Fiore, buys many herbs and grows a few himself, i
         
 
 Evil Group Note: current refugee at [Marine HQ]        
+
+Owns a piece of jewelry from [Grogar] worth 2000gold
