--- a/data/Kadi.wiki
+++ b/data/Kadi.wiki
@@ -17,5 +17,11 @@ When released by the Year of the Skulls ritual
         -chains, mean, obedient
         
 ++++Kethra
-  At the bottom of the mine in [Kaladim] (if the portal is open), sent here to die      
+  At the bottom of the mine in [Kaladim] (if the portal is open), sent here to die
+  
+++++Leciria
+  A captain of Kadi's forces in [Archeron] (Champion Volos)      
+  Summoned to show a way to the [Rotting Tower] for the EVIL GROUP
+  
+    
         
