--- a/data/3 Helms Deep.wiki
+++ b/data/3 Helms Deep.wiki
@@ -10,7 +10,7 @@ Weeny:
       (8)-Dry- Torrid, Human M, also frequenting the Tavern, ordering an abundant number of drinks, or in the market begging for drink money
       (12)-You Are What You Eat- Durk, who used to be an ogre over a thousand years ago, now in the human body of Brian, and very confused
 
-Population: 146
+Population: 151
 Taxes: 240g/month (low) 480g/month (med) 960g/month (high)
     -population x2 for low, then x2 that for each higher bracket
 Marine Upkeep: 840g/month   -500G subsidy for Marine Upkeep to offer med taxes
@@ -18,7 +18,9 @@ Trade Routes: None
 Treasury: 2527
          -1680 (2 months)
           +960 (2 months)
-         =1807  
+         =1807
+          -240
+         =1567  
         
 -East,South,West Gate is reinforced with the stone wall, including a hinged gate.
 -Statue of [Regdar] at the top of the stairs to the noble quarter.
@@ -72,9 +74,13 @@ Refugees from [Luthadel]
     -Carpenters Jerrod Louverre and 2 fellow carpenters still run the carpenter's guild        
             
 -North Dock
-    - 2 [Order of Steel] warships are parked here, one has no cannons or control orb, the other has 3 cannons and a control orb
+    - 1 [Order of Steel] warships are parked here, one has no cannons or control orb
     -Menagerie: animal vendor at a warehouse, Ghan Bopps (dwarf) a bit smelly, but otherwise very nice, had a wanted poster out for the Fiore Griffin with the [Marines] - 436 Gold
             2cp x lb of chicken (1d6) (5 at stall)
             1gp per goat (2 at stall)
             3gp per pig (2 at stall) 
             4 horses
+            
+-Northern Fjord
+    -Boat Crane (tested to work easily with keelboats, build for warships, miiight work for metal warships (untested))
+                
