--- a/data/Shadowfell.wiki
+++ b/data/Shadowfell.wiki
@@ -3,7 +3,7 @@
 [Shadowfell Towns]
 
 Wandering Weenies:
-   - Ambush by a group of Lost (from Mordekainens)
+   - Ambush by a group of Lost (pg 233 from Mordekainens)
    
 
 
