--- a/data/Acheron.wiki
+++ b/data/Acheron.wiki
@@ -14,7 +14,9 @@ Factions that are constantly at war:
   -The Ogre tribes of [Vaprak]
   
 Archeron is a big cash cow for people of the adjacent realm of [Shadowfell]  
-  -food/weapons/armour
+  -food/weapons/armour and importantly, dead bodies
+  
+Weenie: Cadaver Collector (pg 122 of Mordekainen's) a lumbering construct adorned with corpses of the fallen, adhered to it's hull by swords, spears and other sharp implements.   
   
   
 Places of Interest:
