--- a/data/Evil Group Notes.wiki
+++ b/data/Evil Group Notes.wiki
@@ -919,9 +919,36 @@ Teleport back to the cave to the Material Plane
        XX
        
     Parks the ship at the east dock, travels inland to [3 Helms Deep]   
-     - goes to old man Muu's bonfire of fruits 
+     - goes to old man Muu's [Bahamut] bonfire of fruits 
      
-    [Grix] to install the emerald onto the end of [Grogar]'s whip
+    [Royal Armoror Grix] to install the emerald onto the end of [Grogar]'s whip, (2 days to complete) X
     
+++++Session 56
+    Weenie: [Grogar] wakes up with a human arm sticking out of his back, giving him a caress (from [Magnolia] in [Gorda])
     
+    [Croaker] commissions a Gold gauntlet worth 500g from [Shirrong Bronzecore] (25 days) X
+    -deters the woman away from dealing with [Smoke] the tabaxi
+    -uses mass suggestion from a ring of spell storage to gather people to the palace
+    -[Croaker] loots the house of the noble who recently withdrew gold from thier safe
     
+    The drunk You are what you eat fruit eater, Mayor Ubring and Grogar go off into a side room to recruit him to be head of the town militia
+      -Grogar knocks out the drunk
+      -drags him north into the woods
+      -tie and gag him to a tree
+      
+    Mayor Ubring ushers the elderly man into a side room to put him in charge of agriculture  
+    
+    [Croaker] passes out goodberries to the people in front of the palace
+    
+    [Vulcan] performs the wood woad ritual with the drunk who consumed the You are what you eat
+      - the wood woad will have the fruit sprout from it's head (which will turn the next consumer into a mohoganny tree)
+      
+    The party long rests at the palace  
+      -interrupted at 1am by 'The night of the gentle caress', an arm reaching through [Magnolia] and caresses [Grogar]
+      -[Croaker],[Edan],[Smoke] pass through [Grogar] to [Magnolia]/[Gorda]
+      -Another assassination attempt as the group travels through town
+      -[Edan] buys a room for 10g after being upcharged to 1g at the Blooming Orchid
+      -[Croaker] buys a room for 5s with [Smoke]'s body
+      -[Vulcan] and [Grogar] rest at the palace
+      
+        Weenie: once established, the Eye of Gruumsh, [Lok'Nar] from [Kaladim] will send word to [Grogar] that the area is fortified and ready for his command through a sending spell.
