--- a/data/Kaladim.wiki
+++ b/data/Kaladim.wiki
@@ -38,3 +38,33 @@ The inside is littered with broken human arms, the remainder of each respective 
       - the portal which is a large Granite cube that has a red glow coming from beyond a rocky tunnel in it
       - Orcs that came through the portal at first were orcs that got consumed by the [Mistwraith] Wurm, then later used as a dumping zone for prisoners of war from the realm of [Acheron]
       - follower of [Kadi], [Kethra] 
+      
+    POST MISTWRAITH REMOVAL
+      The orcish forges, taskmaster Klahsh, strict, allows no slacking!
+        the orcs of [Acheron] have repurposed the forges to smelt unusable metal  weapons and armour into.... "usable" weapons and armour
+        
+      The portal ramparts
+        should the orc lose the cube position in [Acheron] that was incredible undefendable, they have a wonderful funnel that is, this portal.
+        -The top is lined with braiziers that keep tar boiling at all times. (found conventiently all around the outside area!)
+        -10 orcs with crude crossbows line the top ledge as well.
+        -the immediate area around the portal has blackened wood spike pallisade with roughly 20 orc spearmen who keep guard.
+        
+      The Eye's Room
+        [Lok'Nar]'s room, where order to this stronghold is made while King [Grogar] is away.
+        
+      Boar Pens
+        The primary source of food for the orcs, fed a diet of the parts of thier fallen enemies in [Acheron] 
+        -3g per boar       
+        -5s per piglet
+        
+      Water Well
+        The previous place where the [Daughter of the Night] was kept by [Venril Sathir], when dug just 50ft deeper by the orcs, water was struck and is now an important source of water.
+        
+      Torture room:
+        Torture is a form of entertainment for bored orcs!
+        2 soldiers of [Kadi] and an ogre are in here.
+        -one being roticeried over a fire (cooked for the boars if she doesn't speak, win-win!)
+        -digits being cut off of the other Kadi soldier
+        -the ogre is tied down to the floor, with a boulder being gradually lowered on his torso by ropes. Being crushed into an ogre donut.
+        
+            
