--- a/data/Holy Tome of the Order of Steel.wiki
+++ b/data/Holy Tome of the Order of Steel.wiki
@@ -5,3 +5,7 @@ A holy book often read by members of the [Order of Steel]
 Grants knowledge of the heirarchical structure of the Order of Steel and [Luthadel] itself from Skaa to the God King himself.
 
 Might, Strength, Persistence, Strict. Laws must be enforced, and peace will be wrought. The God King [Venril Sathir] shall guide us to the end of days. He has brought order and a means of existence that brings us closer to Elysium while still on this wretched planet. Those deemed worthy of his grace are granted the right, and can then join his side at his palace. 
+
+Magic is banned and punishable by death, those who harness it are always irresponsible and are followed by death and destruction for all. [Venril Sathir] is the only being worthy of harnessing this power.
+
+[Venril Sathir] raised the great volcano of [Kunark] to subjugate the orc diety of [Gruumsh], it's said that each eruption is a cry from him in agony to his cursed fate. 
