adding ashmadai content

--- a/data/Books.wiki
+++ b/data/Books.wiki
@@ -8,6 +8,7 @@
 [To Kill a Mocking Kenku]
 [Way of the Woad]
 [Strength and Sacrifice]
+[Lexicon of the Hells]
 
 
 [Venril Sathir] Propoganda Books
