--- a/data/Gorda.wiki
+++ b/data/Gorda.wiki
@@ -75,8 +75,11 @@ Areas of Interest:
         Kyra and Jack like a solitary life ever since the imprisonment of thier unstable companion [Kieran Maon]
         -Kyra has befriended 2 of the wild horses for thier personal use when her and Jack need.
         
-++Cult House of [Asmodeus]
-        Looks like any other drunk's home, poorly furnished. The building has no windows other than the two by the front door. Acts has a resting point sometimes for [House Salazar Assassins]
+++[Ashmadai], Cult of [Asmodeus]
+        Looks like any other drunk's home, poorly furnished. The building has no windows other than the two by the front door. Home of the [Asmodeus] worshiping cult of [Ashmadai] Acts has a resting point sometimes for [House Salazar Assassins]
+        Lead by [Favria]
+        Through a trapdoor to the basement, is a crudely carved "Portal" used by the cult to hopefully some day open thier way to the hells.
+        Loot: [Lexicon of the Hells]
         EVIL GROUP NOTES
         By drawing the card for having a demon become his enemy, [Edan] has caused the Cultists here to have a successful ritual finally! Catching them by a bit of surprise. Ultimately resulting in a devil posessing the body of [Rhogar] of [House Salazar Assassins], enhancing his desire to kill [Edan], and also being more favorable toward the cultists for once.
         
